--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.37.1",
     "availity-reactstrap-validation": "^2.7.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
     "formik": "^2.2.9",
     "lodash.clonedeep": "^4.5.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
